--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans,
   Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   line-height: 1.4;
+  background: rgb(250, 243, 181);
 }
   
 .container {
@@ -122,4 +123,21 @@ input[type="text"] {
   padding: 10px;
   border-radius: 4px;
   border: 3px solid #333;
+}
+
+/* Altere `display: flex` para `display: none` */
+.empty-state {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+/* Add this below the other styles */
+.todo-list:empty {
+  display: none;
+}
+
+.todo-list:empty + .empty-state {
+  display: flex;
 }
